imagens para transição

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <button class="btn btn-success" type="button" id="simular" onclick="startSimulation(),tempo(5)">Simular</button>
         </div>
         <div class="col-md-5">
-            <img id="imgShip" width="30" height="120" src="assets/ship.png">
+            <div style="display: none">
+                <img id="imgShip" width="20" height="120" src="assets/ship.png">
+            </div>
             <canvas id="Canvas" height="500" width="500" style="border:1px solid #000000;"></canvas>
         </div>
         <div class="col-md-3">
