--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <title> Simulação de Resgate </title>
     </head>
     <body style="margin-top: 20px">
     <h2> Projeto</h2>
@@ -49,4 +52,3 @@
         <script src="cronometro.js"></script>
     </body>
 </html>
-
