Inserção de imagens

--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
                 <br style="clear: both" />
             </div>
             <button class="btn btn-success" type="button" id="simular" onclick="startSimulation();start()">Simular</button>
-            <button class="btn btn-warning" type="button" id="simular" onclick="stop()">Parar</button>
+            <button class="btn btn-warning" type="button" id="parar" onclick="stop()">Parar</button>
         </div>
         <div class="col-md-5 col-sm-8">
             <div style="display: none">
-                <img id="imgShip" width="0.08" height="0.24" src="assets/ship.png" />
+                <img id="imgShip" width="0.05" height="0.15" src="assets/ship.png" />
                 <img id="imgHelicopter" width="0.08" height="0.08" src="assets/helicoptero.png" />
                 <img id="imgUUVS" src="assets/uuvs.png" />
+
             </div>
             <canvas id="Canvas" height="500" width="500" style="border:1px solid #000000;"></canvas>
         </div>
