--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <input type="number" class="form-control" id="time3">
             </div>
             <div class="form-group">
-                <label for="velocidade">Velocidade de atualização (quanto tempo dura 1 seg.):</label>
-                <input type="number" class="form-control" id="velocidade" value="100" />
+                <label for="velocidade">Velocidade de atualização (tempo em ms a cada clock):</label>
+                <input type="number" class="form-control" id="velocidade" value="33" />
             </div>
             <div class="form-group">
                 <label>Espaço de busca (km):</label><br />
