--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <img id="imgShip" width="0.05" height="0.15" src="assets/ship.png" />
                 <img id="imgHelicopter" width="0.08" height="0.08" src="assets/helicoptero.png" />
                 <img id="imgUUVS" src="assets/uuvs.png" />
+				<img id="imgSafeBoat" src="assets/resgate.png" width="0.08" height="0.08" />
 
             </div>
             <canvas id="Canvas" height="500" width="500" style="border:1px solid #000000;"></canvas>
