--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <input type="number" class="form-control" id="time3">
             </div>
             <div class="form-group">
-                <label for="velocidade">Velocidade de atualização (tempo em ms a cada clock):</label>
+                <label for="velocidade">Velocidade de atualização (tempo em ms de cada segundo):</label>
                 <input type="number" class="form-control" id="velocidade" value="33" />
             </div>
             <div class="form-group">
