--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
             <h3>Entrada</h3>
 
             <div class="form-group">
-                <label for="time">Espaço de busca:</label>
-                <input type="number" class="form-control" id="time">
-            </div>
-            <div class="form-group">
-                <label for="time">Tempo estimado de sobrevivência das pessoas em minutos:</label>
+                <label for="time">Tempo estimado de sobrevivência das pessoas (minutos):</label>
                 <input type="number" class="form-control" id="time">
             </div>
             <div class="form-group">
@@ -39,6 +35,10 @@
             <div class="form-group">
                 <label for="time3">Tempo deslocamento da unidade:</label>
                 <input type="number" class="form-control" id="time3">
+            </div>
+            <div class="form-group">
+                <label for="baseDistance">Distância do ponto inicial (km):</label>
+                <input type="number" class="form-control" id="baseDistance" value="10">
             </div>
             <div class="form-group">
                 <label for="velocidade">Velocidade de atualização (tempo em ms de cada segundo):</label>
