Delimitação de tempo de busca pelo tempo de sobrevivencia

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             <h3>Saida</h3>
             <label for="people">Tempo percorrido:</label>
             <span id="hora">00h</span><span id="minuto">00m</span><span id="segundo">00s</span><br>
-            <label for="people">Quantidade de pessoas resgatadas: <span id="peopleSave"> 00 </span> </label>
+            <label for="people">Quantidade de pessoas resgatadas: <span id="peopleSave"> 00 </span> </label> <br>
+            <label> Status: <span id="status"> Não Iniciado </span></label>
         </div>
         <script type="text/javascript" src="utils.js"></script>
         <script type="text/javascript" src="interface.js"></script>
