Implementação pessoas mortas

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <input type="number" class="form-control" id="time">
             </div>
             <div class="form-group">
-                <label for="time2">Desvio máximo do tempo de sobrevivência:</label>
+                <label for="time2">Desvio máximo do tempo de sobrevivência (minutos::</label>
                 <input type="number" class="form-control" id="time2">
             </div>
             <div class="form-group">
@@ -71,7 +71,9 @@
             <h3>Saida</h3>
             <label for="people">Tempo percorrido:</label>
             <span id="hora">00h</span><span id="minuto">00m</span><span id="segundo">00s</span><br>
-            <label for="people">Quantidade de pessoas resgatadas: <span id="peopleSave"> 00 </span> </label> <br>
+            <label for="peopleSave">Quantidade de pessoas resgatadas: <span id="peopleSave"> 00 </span> </label> <br>
+            <label for="peopleLive">Quantidade de pessoas vivas: <span id="peopleLive"> 00 </span> </label> <br>
+            <label for="peopleDie">Quantidade de pessoas mortas: <span id="peopleDie"> 00 </span> </label> <br>
             <label> Status: <span id="status"> Não Iniciado </span></label>
         </div>
         <script type="text/javascript" src="utils.js"></script>
