--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 <input type="number" class="form-control" id="baseDistance" value="10">
             </div>
             <div class="form-group">
+                <label for="preparationTime">Tempo de praparo da equipe:</label>
+                <input type="number" class="form-control" id="preparationTime">
+            </div>
+            <div class="form-group">
                 <label for="velocidade">Velocidade de atualização (tempo em ms de cada segundo):</label>
                 <input type="number" class="form-control" id="velocidade" value="33" />
             </div>
