--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <h3>Saida</h3>
             <label for="people">Tempo percorrido:</label>
             <span id="hora">00h</span><span id="minuto">00m</span><span id="segundo">00s</span><br>
-            <label for="peopleSave">Quantidade de pessoas resgatadas: <span id="peopleSave"> 00 </span> </label> <br>
-            <label for="peopleLive">Quantidade de pessoas vivas: <span id="peopleLive"> 00 </span> </label> <br>
-            <label for="peopleDie">Quantidade de pessoas mortas: <span id="peopleDie"> 00 </span> </label> <br>
+            <label for="peopleSave">Quantidade de pessoas resgatadas vivas: <span id="peopleSave"> 00 </span> </label> <br>
+            <label for="peopleDie">Quantidade de pessoas resgatadas mortas: <span id="peopleDie"> 00 </span> </label> <br>
+            <label for="peopleDisappeared">Quantidade de pessoas desaparecidas: <span id="peopleDisappeared"> 00 </span> </label> <br>
             <label> Status: <span id="status"> Não Iniciado </span></label>
         </div>
         <script type="text/javascript" src="utils.js"></script>
