--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <input type="number" class="form-control" id="time">
             </div>
             <div class="form-group">
-                <label for="time2">Desvio máximo do tempo de sobrevivência (minutos::</label>
+                <label for="time2">Desvio máximo do tempo de sobrevivência (minutos):</label>
                 <input type="number" class="form-control" id="time2">
             </div>
             <div class="form-group">
@@ -36,7 +36,7 @@
                 <input type="number" class="form-control" id="baseDistance" value="10">
             </div>
             <div class="form-group">
-                <label for="preparationTime">Tempo de praparo da equipe:</label>
+                <label for="preparationTime">Tempo de praparo da equipe (minutos):</label>
                 <input type="number" class="form-control" id="preparationTime">
             </div>
             <div class="form-group">
