Adicionado pessoas sendo salvas e melhorado início da busca aleatória

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <span id="hora">00h</span><span id="minuto">00m</span><span id="segundo">00s</span><br>
             <label for="peopleSave">Quantidade de pessoas resgatadas vivas: <span id="peopleSave"> 00 </span> </label> <br>
             <label for="peopleDie">Quantidade de pessoas resgatadas mortas: <span id="peopleDie"> 00 </span> </label> <br>
+            <label for="peopleBeingSaved">Quantidade de pessoas sendo resgatadas: <span id="peopleBeingSaved"> 00 </span> </label> <br>
             <label for="peopleDisappeared">Quantidade de pessoas desaparecidas: <span id="peopleDisappeared"> 00 </span> </label> <br>
             <label> Status: <span id="status"> Não Iniciado </span></label>
             <canvas id="chart" width="300" height="300"></canvas>
