Criado estado de busca, Objetos de algoritmos alterados para função

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     <label>Algoritmo para busca:</label><br />
                     <select class="form-control col-sm-6" id="selectOfAlgorithms">
                         <option value="randomAlgorithm">Aleatório</option>
+                        <option value="expandingSquaresAlgorithm">Quadrados Crescentes</option>
                     </select>
                 </div>
                 <div style="float: right; margin-top: 4px;">
@@ -91,5 +92,6 @@
         <script type="text/javascript" src="cronometro.js"></script>
         <script type="text/javascript" src="control.js"></script>
         <script type="text/javascript" src="algorithms/random.js"></script>
+        <script type="text/javascript" src="algorithms/expanding-squares.js"></script>
     </body>
 </html>
