Implementada busca com trajetória paralela

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <select class="form-control col-sm-6" id="selectOfAlgorithms">
                         <option value="randomAlgorithm">Aleatório</option>
                         <option value="expandingSquaresAlgorithm">Quadrados Crescentes</option>
+                        <option value="parallelTrajectoryAlgorithm">Trajetória Paralela</option>
                     </select>
                 </div>
                 <div style="float: right; margin-top: 4px;">
@@ -93,5 +94,6 @@
         <script type="text/javascript" src="control.js"></script>
         <script type="text/javascript" src="algorithms/random.js"></script>
         <script type="text/javascript" src="algorithms/expanding-squares.js"></script>
+        <script type="text/javascript" src="algorithms/parallel-trajectory.js"></script>
     </body>
 </html>
